Use cgroup mem limit to set JVM heap